--- a/index.html
+++ b/index.html
@@ -49,7 +49,6 @@
             <a href="Medical.html">Medical Team</a>
             <a href="Shop.html">Shop</a>
             <a href="Contact.html">Contact Us</a>
-            <a href="">Dental Blog</a>
             <button>Emergency Call</button>
           </nav>
         </header>
@@ -91,16 +90,6 @@
           <div class="swiper-slide wow animate__animated bounceInRight"><img src="assets/image/4.png" alt=""></div>
       </div>
   </div>
-
-
-  
-
-
-    <!-- <div class="slider">
-      <img src="assets/image/5.png" alt="">
-      <img src="assets/image/5.png" alt="">
-      <img src="assets/image/5.png" alt="">
-    </div> -->
     <!-- slider end -->
     <!-- Dental repair start -->
     <div class="cosmetic">
@@ -288,7 +277,7 @@
   <div class="OurClinic">
     <div class="container">
       <div class="row">
-        <div class="col-lg-6 col-sm-12">
+        <div class="col-lg-6 gap-3 m-3 col-sm-12">
           <div class="OurClinic-tex">
             <h3>Why You Should Choose <span>Our Clinic</span></h3>
             <p>The goal of our clinic is to provide friendly, caring dentistry and the highest level of general, cosmetic, and specialist dental treatments.</p>
